[gd_scene load_steps=2 format=3 uid="uid://c072uq7qbyse6"]

[ext_resource type="Script" path="res://scene objects/upper_ui_gacha.gd" id="1_kdprm"]

[node name="upper_ui_gacha" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_kdprm")

[node name="label_moedas" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 62.0
offset_bottom = 23.0
text = "moedas"

[node name="label_dias" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1.0
offset_top = 21.0
offset_right = 63.0
offset_bottom = 44.0
text = "dia"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 135.0
offset_top = 124.0
offset_right = 294.0
offset_bottom = 178.0
text = "gacha!"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 267.0
offset_top = 6.0
offset_right = 342.0
offset_bottom = 37.0
text = "next day"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 9.0
offset_top = 150.0
offset_right = 76.0
offset_bottom = 181.0
text = "coleção"

[node name="Button4" type="Button" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 115.0
offset_right = 81.0
offset_bottom = 146.0
text = "mercado"

[node name="console" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 89.0
offset_top = 45.0
offset_right = 343.0
offset_bottom = 117.0
theme_override_font_sizes/font_size = 13
autowrap_mode = 3

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="Button2" to="." method="_on_button_2_button_down"]
[connection signal="button_down" from="Button3" to="." method="_on_button_3_button_down"]
[connection signal="button_down" from="Button4" to="." method="_on_button_4_button_down"]
